Added 20 new products with updated rings, watches, earrings ,necklace and also updated and added products to each of their seperate pages such as watches page and the ring page and the earring page and the bracelets page etc

--- a/jewelry-store/bracelets.html
+++ b/jewelry-store/bracelets.html
@@ -32,12 +32,69 @@
         <p class="TitleDescription">Bracelets handcrafted with care.</p>
       </section>
 
-      <main class="ProductsGrid" aria-label="Bracelets">
-        <a class="ProductCard" href="product.html?product=bleeding-heart-bracelet">
-          <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/BleedingHeartBracelet.png" alt="Bleeding Heart Bracelet"></div>
-          <div class="ProductInfo"><h3 class="ProductTitle">Bleeding Heart Bracelet</h3><p class="ProductDescription">Handcrafted bracelet with romantic detailing. A statement piece celebrating love and craftsmanship with timeless appeal.</p><div class="ProductMeta"><span class="ProductPrice">£149</span></div></div>
-        </a>
-      </main>
+      < <main class="ProductsGrid" aria-label="Bracelets">
+
+  <a class="ProductCard" href="products.html?product=BleedingHeartBracelet" data-name="Bleeding Heart Bracelet" data-category="Bracelet">
+    <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/BleedingHeartBracelet.png" alt="Bleeding Heart Bracelet"></div>
+    <div class="ProductInfo">
+      <h3 class="ProductTitle">Bleeding Heart Bracelet</h3>
+      <p class="ProductDescription">Handcrafted bracelet with romantic detailing. A statement piece celebrating love and craftsmanship with timeless appeal.</p>
+      <div class="ProductMeta"><span class="ProductPrice">£149</span></div>
+    </div>
+  </a>
+
+   <a class="ProductCard" href="products.html?product=charm-Bracelet" data-name="Charm Bracelet" data-category="Bracelet">
+    <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/charm-bracelet.jpg" alt="Charm Bracelet"></div>
+    <div class="ProductInfo">
+      <h3 class="ProductTitle">Charm Bracelet</h3>
+      <p class="ProductDescription">Handcrafted bracelet with romantic detailing. A statement piece celebrating love and craftsmanship with timeless appeal.</p>
+      <div class="ProductMeta"><span class="ProductPrice">£1419</span></div>
+    </div>
+  </a>
+
+   <a class="ProductCard" href="products.html?product=gold-bangle" data-name="Gold Bangle" data-category="Bracelet">
+    <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/gold-bangle.jpg" alt="Gold Bangle"></div>
+    <div class="ProductInfo">
+      <h3 class="ProductTitle">Gold Bangle</h3>
+      <p class="ProductDescription">Handcrafted bracelet with romantic detailing. A statement piece celebrating love and craftsmanship with timeless appeal.</p>
+      <div class="ProductMeta"><span class="ProductPrice">£16303</span></div>
+    </div>
+  </a>
+
+   <a class="ProductCard" href="products.html?product=Leather-Bracelet" data-name="Leather Bracelet" data-category="Bracelet">
+    <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/leather-bracelet.jpg" alt="Leather Bracelet"></div>
+    <div class="ProductInfo">
+      <h3 class="ProductTitle">Leather Bracelet</h3>
+      <p class="ProductDescription">Handcrafted bracelet with romantic detailing. A statement piece celebrating love and craftsmanship with timeless appeal.</p>
+      <div class="ProductMeta"><span class="ProductPrice">£1349</span></div>
+    </div>
+  </a>
+
+   <a class="ProductCard" href="products.html?product=Cuban-Bracelet" data-name="Cuban Bracelet" data-category="Bracelet">
+    <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/cuban-bracelet.jpg" alt="Cuban Bracelet"></div>
+    <div class="ProductInfo">
+      <h3 class="ProductTitle">Cuban Bracelet</h3>
+      <p class="ProductDescription">Handcrafted bracelet with romantic detailing. A statement piece celebrating love and craftsmanship with timeless appeal.</p>
+      <div class="ProductMeta"><span class="ProductPrice">£8302</span></div>
+    </div>
+  </a>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      
 
     </div>
 
