--- a/jewelry-store/necklaces.html
+++ b/jewelry-store/necklaces.html
@@ -37,6 +37,31 @@
           <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/HandCraftedJewellry.png" alt="Signature Necklace"></div>
           <div class="ProductInfo"><h3 class="ProductTitle">Signature Necklace</h3><p class="ProductDescription">Statement necklace made by skilled artisans. Designed to elevate any occasion with timeless elegance and premium craftsmanship.</p><div class="ProductMeta"><span class="ProductPrice">£199</span></div></div>
         </a>
+
+<a class="ProductCard" href="product.html?product=gold-necklace">
+          <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/gold-necklace.jpg" alt="Gold Necklace"></div>
+          <div class="ProductInfo"><h3 class="ProductTitle">Gold Necklace</h3><p class="ProductDescription">Statement necklace made by skilled artisans. Designed to elevate any occasion with timeless elegance and premium craftsmanship.</p><div class="ProductMeta"><span class="ProductPrice">£250</span></div></div>
+        </a>
+
+        <a class="ProductCard" href="product.html?product=pearl-necklace">
+          <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/pearl-necklace.jpg" alt="Pearl Necklace"></div>
+          <div class="ProductInfo"><h3 class="ProductTitle">Pearl Necklace</h3><p class="ProductDescription">Statement necklace made by skilled artisans. Designed to elevate any occasion with timeless elegance and premium craftsmanship.</p><div class="ProductMeta"><span class="ProductPrice">£240</span></div></div>
+        </a>
+
+        <a class="ProductCard" href="product.html?product=diamond-choker">
+          <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/diamond-choker.jpg" alt="Diamond Choker"></div>
+          <div class="ProductInfo"><h3 class="ProductTitle">Diamond Choker</h3><p class="ProductDescription">Statement necklace made by skilled artisans. Designed to elevate any occasion with timeless elegance and premium craftsmanship.</p><div class="ProductMeta"><span class="ProductPrice">£280</span></div></div>
+        </a>
+
+        <a class="ProductCard" href="product.html?product=layered-necklace">
+          <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/layered-necklace.jpg" alt="Layered Necklace"></div>
+          <div class="ProductInfo"><h3 class="ProductTitle">Layered Necklace</h3><p class="ProductDescription">Statement necklace made by skilled artisans. Designed to elevate any occasion with timeless elegance and premium craftsmanship.</p><div class="ProductMeta"><span class="ProductPrice">£450</span></div></div>
+        </a>
+
+
+
+
+
         <a class="ProductCard" href="product.html?product=signature-pendant">
           <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/LandingPageImage.png" alt="Signature Pendant"></div>
           <div class="ProductInfo"><h3 class="ProductTitle">Signature Pendant</h3><p class="ProductDescription">A timeless pendant inspired by classical forms. Precision craftsmanship meets elegant design for the discerning collector.</p><div class="ProductMeta"><span class="ProductPrice">£179</span></div></div>
