--- a/jewelry-store/rings.html
+++ b/jewelry-store/rings.html
@@ -33,11 +33,56 @@
       </section>
 
       <main class="ProductsGrid" aria-label="Rings">
-        <a class="ProductCard" href="product.html?product=buta-ring">
-          <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/ButaRing.png" alt="Buta Ring"></div>
-          <div class="ProductInfo"><h3 class="ProductTitle">Buta Ring</h3><p class="ProductDescription">A beautifully detailed ring with traditional motifs. Handcrafted from ethically sourced materials with intricate detailing.</p><div class="ProductMeta"><span class="ProductPrice">£129</span></div></div>
-        </a>
-      </main>
+
+  <a class="ProductCard" href="products.html?product=buta-ring" data-name="Buta Ring" data-category="Ring">
+    <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/ButaRing.png" alt="Buta Ring"></div>
+    <div class="ProductInfo">
+      <h3 class="ProductTitle">Buta Ring</h3>
+      <p class="ProductDescription">A beautifully detailed ring with traditional motifs. Handcrafted from ethically sourced materials with intricate detailing.</p>
+      <div class="ProductMeta"><span class="ProductPrice">£129</span></div>
+    </div>
+  </a>
+
+  <a class="ProductCard" href="products.html?product=rose-gold-ring" data-name="Rose Gold Ring" data-category="Ring">
+    <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/rose-gold.jpg" alt="Rose Gold Ring"></div>
+    <div class="ProductInfo">
+      <h3 class="ProductTitle">Rose Gold Ring</h3>
+      <p class="ProductDescription">A beautifully Rose gold goldern detailed ring with traditional motifs. Handcrafted from ethically sourced materials with intricate detailing.</p>
+      <div class="ProductMeta"><span class="ProductPrice">£3049</span></div>
+    </div>
+  </a>
+
+  <a class="ProductCard" href="products.html?product=diamond-ring" data-name="Diamond Ring" data-category="Ring">
+    <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/diamond-ring.jpg" alt="Diamond Ring"></div>
+    <div class="ProductInfo">
+      <h3 class="ProductTitle">Diamond Ring</h3>
+      <p class="ProductDescription">A dazzling diamond ring that captures the essence of luxury and elegance. Handcrafted from ethically sourced materials with intricate detailing.</p>
+      <div class="ProductMeta"><span class="ProductPrice">£1929</span></div>
+    </div>
+  </a>
+
+<a class="ProductCard" href="products.html?product=Sapphire-ring" data-name="Sapphire Ring" data-category="Ring">
+    <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/saphire-ring.jpg" alt="Sapphire Ring"></div>
+    <div class="ProductInfo">
+      <h3 class="ProductTitle">Sapphire Ring</h3>
+      <p class="ProductDescription">A dazzling sapphire ring that captures the essence of luxury and elegance. Handcrafted from ethically sourced materials with intricate detailing.</p>
+      <div class="ProductMeta"><span class="ProductPrice">£4059</span></div>
+    </div>
+  </a>
+
+  <a class="ProductCard" href="products.html?product=vintage-ring" data-name="Vintage Ring" data-category="Ring">
+    <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/vintage-ring.jpg" alt="Vintage Ring"></div>
+    <div class="ProductInfo">
+      <h3 class="ProductTitle">Vintage Ring</h3>
+      <p class="ProductDescription">A vintage-inspired ring with timeless elegance. Handcrafted from ethically sourced materials with intricate detailing.</p>
+      <div class="ProductMeta"><span class="ProductPrice">£9302</span></div>
+    </div>
+  </a>
+
+
+
+
+</main>
 
     </div>
 
