--- a/jewelry-store/watches.html
+++ b/jewelry-store/watches.html
@@ -17,14 +17,72 @@
         <div class="IconNav" id="auth-buttons"></div>
       </header>
 
+      <!-- Category sub-navigation -->
+      <nav class="CategoryNav" aria-label="Product categories">
+        <a href="products.html">All</a>
+        <a href="rings.html">Rings</a>
+        <a href="earrings.html">Earrings</a>
+        <a href="bracelets.html">Bracelets</a>
+        <a href="necklaces.html">Necklaces</a>
+        <a href="watches.html">Watches</a>
+      </nav>
+
       <section class="TitleSection">
         <h1 class="MainTitle">Watches</h1>
-        <p class="TitleDescription">Curated mechanical and quartz watches (coming soon).</p>
+        <p class="TitleDescription">Curated mechanical and Diamond dazzle watches for luxury moments.</p>
       </section>
 
-      <main class="ProductsGrid" aria-label="Watches">
-        <div class="InfoPlaceholder">We are adding our watch collection soon. Check back later.</div>
-      </main>
+       <main class="ProductsGrid" aria-label="Watches">
+
+  <a class="ProductCard" href="products.html?product=classic-leather-watch" data-name="Classic Leather Watch" data-category="Watch">
+    <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/classic-leather-watch.jpg" alt="Classic Leather Watch"></div>
+    <div class="ProductInfo">
+      <h3 class="ProductTitle">Classic Leather Watch</h3>
+      <p class="ProductDescription">Handcrafted watch with romantic detailing. A statement piece celebrating love and craftsmanship with timeless appeal.</p>
+      <div class="ProductMeta"><span class="ProductPrice">£987</span></div>
+    </div>
+  </a>
+
+
+  <a class="ProductCard" href="products.html?product=Sport-watch" data-name="Sport Watch" data-category="Watch">
+    <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/sport-watch.jpg" alt="Sport Watch"></div>
+    <div class="ProductInfo">
+      <h3 class="ProductTitle">Sport Watch</h3>
+      <p class="ProductDescription">Handcrafted watch with romantic detailing. A statement piece celebrating love and craftsmanship with timeless appeal.</p>
+      <div class="ProductMeta"><span class="ProductPrice">£890</span></div>
+    </div>
+  </a>
+
+   <a class="ProductCard" href="products.html?product=gold-watch" data-name="Gold Watch" data-category="Watch">
+    <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/gold-watch.jpg" alt="Gold Watch"></div>
+    <div class="ProductInfo">
+      <h3 class="ProductTitle">Gold Watch</h3>
+      <p class="ProductDescription">Handcrafted watch with romantic detailing. A statement piece celebrating love and craftsmanship with timeless appeal.</p>
+      <div class="ProductMeta"><span class="ProductPrice">£1240</span></div>
+    </div>
+  </a>
+
+   <a class="ProductCard" href="products.html?product=Luxury-watch" data-name="Luxury Watch" data-category="Watch">
+    <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/Rolexwatch.jpg" alt="Luxury Watch"></div>
+    <div class="ProductInfo">
+      <h3 class="ProductTitle">Luxury Watch</h3>
+      <p class="ProductDescription">Handcrafted watch with romantic detailing. A statement piece celebrating love and craftsmanship with timeless appeal.</p>
+      <div class="ProductMeta"><span class="ProductPrice">£1729</span></div>
+    </div>
+  </a>
+
+   <a class="ProductCard" href="products.html?product=Silver-Watch" data-name="Silver Watch" data-category="Watch">
+    <div class="ProductImageWrap"><img class="ProductImage" src="assets/images/silver-watch.jpg" alt="Silver Watch"></div>
+    <div class="ProductInfo">
+      <h3 class="ProductTitle">Silver Watch</h3>
+      <p class="ProductDescription">Handcrafted watch with romantic detailing. A statement piece celebrating love and craftsmanship with timeless appeal.</p>
+      <div class="ProductMeta"><span class="ProductPrice">£3404</span></div>
+    </div>
+  </a>
+
+      
+
+
 
     </div>
 
